[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/field/Field.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/Racket/Racket.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Racket/PlayerInputComponent.gd" type="Script" id=4]
[ext_resource path="res://entities/Racket/AiInputComponent.gd" type="Script" id=5]
[ext_resource path="res://entities/Ball/Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/FinalScreen/FinalScreen.tscn" type="PackedScene" id=8]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Field" parent="." instance=ExtResource( 2 )]

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 256 )

[node name="PlayerInputComponent" type="Node" parent="Player1"]
script = ExtResource( 4 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 974, 256 )

[node name="AiInputComponent" type="Node" parent="Player2"]
script = ExtResource( 5 )
ball_path = NodePath("../../Ball")

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 256 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="FinalScreen" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[connection signal="goal_left" from="Field" to="." method="_on_Field_goal_left"]
[connection signal="goal_right" from="Field" to="." method="_on_Field_goal_right"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="exit" from="CanvasLayer/FinalScreen" to="." method="_on_FinalScreen_exit"]
[connection signal="new_round" from="CanvasLayer/FinalScreen" to="." method="_on_FinalScreen_new_round"]
